refactor(LinkedListUtil.java): update LinkedList operations to improve clarity and functionality by adding print statements and changing method calls for better understanding of list state